Exception service added, get mapping fixed